force-app/main/default/objects/Candidate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderbad</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>MadhayPradesh</fullName>
            </value>
            <value>
                <fullName>New york</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Mishgen</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Peshavar</fullName>
            </value>
            <value>
                <fullName>Pakistan Hyderbad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>