force-app/main/default/objects/Candidate__c/listViews/Assign_Task_Queu_Candidate.listView-meta.xml
<ListView>
    <fullName>Assign_Task_Queu_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>Assign Task Queue</label>
    <queue>Assign_Task_Queu</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>